--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="canonical" href="{{ BlogLink `http://example.com` }}">
-  <meta name="description" content="{{ BlogDescription `Blog about underblog` }}">
-  <title>{{ BlogTitle "My Blog" }}</title>
+  <link rel="canonical" href="http://example.com">
+  <meta name="description" content="Blog about underblog">
+  <title>My Blog</title>
 </head>
 <body>
   <div class="container">
